# mcp-hello-world

./: .env  .env.example  .gitignore  README.md  pyproject.toml
mcp_hello_world/: __main__.py  main.py
